Bug 156287 - Layout loop (continuous CPU consumption) opening a specific document with off-page textbox
Summary: Layout loop (continuous CPU consumption) opening a specific document with off...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-07-14 14:24 UTC by Mike Kaganski
Modified: 2023-07-15 03:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Off-page textbox anchored on last page (1.82 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-07-14 14:24 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-07-14 14:24:32 UTC
Created attachment 188378 [details]
Off-page textbox anchored on last page

The attached minimized DOCX has four pages, first three are simply paragraphs with page breaks; and the last page paragraph has an anchored text box, which is shifted upwards outside of the page.

Since commit b14bb255199e7d6db6ec9155b5d9237cb35fdba7 (tdf#143239 sw: layout: invalidate fly position when moving off page, 2022-02-25), opening the document keeps CPU busy indefinitely (document is shown, and UI is responsive, though).
Comment 1 Mike Kaganski 2023-07-14 16:02:30 UTC
https://gerrit.libreoffice.org/c/core/+/154444
Comment 2 Commit Notification 2023-07-14 18:33:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9af660cd26e39a6d933dd862fd6630c4055c91f

tdf#156287: don't try to move objects to pages other than their anchor

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Mike Kaganski 2023-07-14 18:34:40 UTC
Hopefully fixed.